test/trivial/bradc/redefinevar.good
redefinevar.chpl:1: error: 'x' has multiple definitions, redefined at:
  redefinevar.chpl:2
