test/trivial/bradc/redefinevar.chpl
var x: int = 3;
var x: int = 5;

writeln("x is: ", x);
